@@ -48,6 +48,7 @@
 - eliminate NULL proc ping for singleton host or local mounts.
 - fix incorrect read/write size of startup status token (Matthias Koenig).
 - fix off-by-one error for lookup of map keys exactly 255 characters long.
+- improve handling of server not available.
 
 18/06/2007 autofs-5.0.2
 -----------------------
